--- a/README
+++ b/README
@@ -12,7 +12,7 @@ SYNOPSIS
 DESCRIPTION
     Actually creating a symlink is not problematic, but making an existing
     one point at a new target may not be atomic on your system. For example,
-    on Linus, the system does "unlink" and then "symlink". In between, no
+    on Linux, the system does "unlink" and then "symlink". In between, no
     symlink exists. If something goes wrong, you're left with nothing.
 
     In your shell, you probably want to do something like:
@@ -29,6 +29,14 @@ DESCRIPTION
 
     File::Symlink::Atomic attempts to do the same thing in Perl what the
     command shown above does for your shell.
+
+FUNCTIONS
+  symlink OLDFILE,NEWFILE
+    Creates a new filename symbolically linked to the old filename. Returns
+    1 for success, 0 otherwise. This drop-in replacement for "CORE::symlink"
+    creates a symlink with a temporary name, then renames it to the name you
+    requested - this ensures that if a symlink by the requested name already
+    existed, then its target is updated atomically.
 
 CAVEATS
     This module is not guaranteed to be portable. I have no idea what this
@@ -48,7 +56,7 @@ SOURCE
 
 BUGS AND LIMITATIONS
     You can make new bug reports, and view existing ones, through the web
-    interface at <http://rt.cpan.org>.
+    interface at <https://github.com/doherty/File-Symlink-Atomic/issues>.
 
 AUTHOR
     Mike Doherty <doherty@cpan.org>
